Changelog
=========

1.0.6 (unreleased)
------------------

* Added Italian translation.
  [gborelli]

* Added Finnish (fi) translation.
  [dokai]

* By default filter out nodes that are not selectable and not folderish.
  This can be overridden on the widget by setting show_all_nodes to True.
  [maurits]

* Added Dutch translation.
  [maurits]

1.0.5 (2012-02-20)
------------------

* Added Spanish translation
  [hvelarde]

1.0.4 (2011-10-04)
------------------

* fix _getBrainByValue to check if value is traversable
  first so we can provide the correct token.
  [vangheem]

1.0.3 (2011-09-24)
------------------

* Add zh_CN translation.
  [jianaijun]

1.0.2 (2011-07-02)
------------------

* Fix regression that broke the browsing with JQuery < 1.4.
  [davisagli]

1.0.1 (2011-05-16)
------------------

* Make placeholder terms for hidden / missing items, so that you can still see
  something in the editing interface and not accidentally remove them. Ideally
  we should say if a page is invisible or missing, but not today.
  [lentinj]

* Use javascript function from plone.formwidget.autocomplete to add new input
  boxes, make javascript as clone-safe (when making new rows in datagridfield)
  as possible
  [lentinj]

* Just use full widget name in ++widget++ URL, don't try and strip form prefix
  off. If within a subform, this is the wrong thing to do and the traverser now
  supports stripping the initial 'form.widgets'
  [lentinj]

* Workaround for sources being used without being bound first.
  [lentinj]

* Check the request for context before falling back to getSite()
  [lentinj]

* Add a UUIDSource that stores plone.uuid pointers to content.
  [lentinj]

* Use tokens as full URL of content, move all token<->value operations into the
  source. Rename methods so that actually-public methods have public names
  [lentinj]

* Alter terms so that token is the full path to an item, value is the path