@@ -4,4 +4,5 @@ MessageFactory = MessageFactory('plone.formwidget.contenttree')
 from plone.formwidget.contenttree.widget import ContentTreeFieldWidget
 from plone.formwidget.contenttree.widget import MultiContentTreeFieldWidget
 
-from plone.formwidget.contenttree.source import PathSourceBinder, ObjPathSourceBinder, UUIDSourceBinder
+from plone.formwidget.contenttree.source import PathSourceBinder,\
+    ObjPathSourceBinder, UUIDSourceBinder
