@@ -34,12 +34,14 @@ class TestAdapter(object):
 
     def _get_buddy(self):
         return None
+
     def _set_buddy(self, value):
         print "setting", value
     buddy = property(_get_buddy, _set_buddy)
 
     def _get_friends(self):
         return []
+
     def _set_friends(self, value):
         print "setting", value
     friends = property(_get_friends, _set_friends)
