@@ -5,7 +5,10 @@ from zope.testing import doctest
 from zope.app.testing.functional import ZCMLLayer
 
 testing_zcml_path = os.path.join(os.path.dirname(__file__), 'testing.zcml')
-testing_zcml_layer = ZCMLLayer(testing_zcml_path, 'plone.formwidget.contenttree', 'testing_zcml_layer')
+testing_zcml_layer = ZCMLLayer(testing_zcml_path,
+                               'plone.formwidget.contenttree',
+                               'testing_zcml_layer')
+
 
 def test_suite():
     readme_txt = doctest.DocFileSuite('README.txt')
@@ -13,4 +16,4 @@ def test_suite():
 
     return unittest.TestSuite([
         readme_txt,
-        ])
+    ])
